[package]
name = "qparas"
version = "0.1.0"
authors = ["Miraculous Owonubi <omiraculous@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
description = "Query the Paras.id API, returning JSON data"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.79"
