[package]
name = "qparas"
version = "0.1.0"
authors = ["Miraculous Owonubi <omiraculous@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miraclx/qparas"
description = "Query the Paras.id API, returning unpaginated JSON data"
categories = ["command-line-utilities"]
keywords = ["paras", "api", "near", "nft", "async"]
rust-version = "1.56.0"

[dependencies]
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
env_logger = "0.9.0"
serde_json = "1.0.79"
